Puppet OpenStack queens-1
Change-Id: Ia6078ed8eb0018eb9fac5a448383c27330a175e1

--- a/deliverables/queens/puppet-ceilometer.yaml
+++ b/deliverables/queens/puppet-ceilometer.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-ceilometer
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 9d34005f5d1451dd5be0dcacac23c8f5c3603548
+        repo: openstack/puppet-ceilometer
+    version: 12.0.0
