--- a/deliverables/queens/puppet-aodh.yaml
+++ b/deliverables/queens/puppet-aodh.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-aodh
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 8e87d862bf67184011e39c9bc9b5d8eb0d8b0982
+        repo: openstack/puppet-aodh
+    version: 12.0.0
