--- a/deliverables/queens/puppet-barbican.yaml
+++ b/deliverables/queens/puppet-barbican.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-barbican
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 67592c907e04c93fe804471c1155fe4c30f72168
+        repo: openstack/puppet-barbican
+    version: 12.0.0
