--- a/deliverables/queens/puppet-cinder.yaml
+++ b/deliverables/queens/puppet-cinder.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-cinder
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: eb5ad47d5ac3682d43511d60a181f702273a9ba0
+        repo: openstack/puppet-cinder
+    version: 12.0.0
