--- a/deliverables/queens/puppet-designate.yaml
+++ b/deliverables/queens/puppet-designate.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-designate
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 606d3830b4f2f4c2ddae9c75ec361508a53533b2
+        repo: openstack/puppet-designate
+    version: 12.0.0
