--- a/deliverables/queens/puppet-horizon.yaml
+++ b/deliverables/queens/puppet-horizon.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-horizon
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 739a7f9014e979e40e8d582c483e514d2df383c2
+        repo: openstack/puppet-horizon
+    version: 12.0.0
