--- a/deliverables/queens/puppet-magnum.yaml
+++ b/deliverables/queens/puppet-magnum.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-magnum
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 2fea6e849ddc2d4a9801c0501aa33682cef73554
+        repo: openstack/puppet-magnum
+    version: 12.0.0
