--- a/deliverables/queens/puppet-neutron.yaml
+++ b/deliverables/queens/puppet-neutron.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-neutron
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 74a47c4b2e05faa0b57330d8be4ac4fdd0bb83d1
+        repo: openstack/puppet-neutron
+    version: 12.0.0
