--- a/deliverables/queens/puppet-nova.yaml
+++ b/deliverables/queens/puppet-nova.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-nova
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 187084d5e9c018aa52bce994fe447a968d56b7de
+        repo: openstack/puppet-nova
+    version: 12.0.0
