--- a/deliverables/queens/puppet-openstack_extras.yaml
+++ b/deliverables/queens/puppet-openstack_extras.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-openstack-extras
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 755b1caae572c45206799bf5fda92baa6225cd1a
+        repo: openstack/puppet-openstack_extras
+    version: 12.0.0
