--- a/deliverables/queens/puppet-openstacklib.yaml
+++ b/deliverables/queens/puppet-openstacklib.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-openstacklib
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 2145140bedbe8951ea0cc2843802203770d98660
+        repo: openstack/puppet-openstacklib
+    version: 12.0.0
