--- a/deliverables/queens/puppet-panko.yaml
+++ b/deliverables/queens/puppet-panko.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-panko
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 42d38686b95da19874edfdcc1d2b80183d0a6cd5
+        repo: openstack/puppet-panko
+    version: 12.0.0
