--- a/deliverables/queens/puppet-swift.yaml
+++ b/deliverables/queens/puppet-swift.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-swift
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: efc5e48c3f496a9ca770a8dc5fda151aaea36b42
+        repo: openstack/puppet-swift
+    version: 12.0.0
