--- a/deliverables/queens/puppet-trove.yaml
+++ b/deliverables/queens/puppet-trove.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-trove
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 11513c0a792e841d65874d8fcbb58439e868f435
+        repo: openstack/puppet-trove
+    version: 12.0.0
