--- a/deliverables/queens/puppet-vswitch.yaml
+++ b/deliverables/queens/puppet-vswitch.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-vswitch
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: c391190d4a30f1a9d38d077e6f5117c6524e1928
+        repo: openstack/puppet-vswitch
+    version: 8.0.0
