Cinder stable/pike 11.0.1 release
Bug fixes for stable/pike.

Change-Id: I53b1c9917b8b1b81c114a3f66442421749a032a8

--- a/deliverables/pike/cinder.yaml
+++ b/deliverables/pike/cinder.yaml
@@ -30,6 +30,10 @@ releases:
       - hash: 7524a44ebb13b76cf42adee0bfff4d999f8dfbb5
         repo: openstack/cinder
     version: 11.0.0
+  - projects:
+      - repo: openstack/cinder
+        hash: 7cc8d0ea63cc19aefcc0844ce455aead44297c21
+    version: 11.0.1
 branches:
   - location: 11.0.0.0rc1
     name: stable/pike
