--- a/deliverables/queens/puppet-vitrage.yaml
+++ b/deliverables/queens/puppet-vitrage.yaml
@@ -3,3 +3,8 @@ launchpad: puppet-vitrage
 release-model: cycle-trailing
 team: 'Puppet OpenStack'
 type: other
+releases:
+  - projects:
+      - hash: 5024eddb1f6c722c118a5f635e5adf7200f3e725
+        repo: openstack/puppet-vitrage
+    version: 2.0.0
