--- a/deliverables/pike/python-zunclient.yaml
+++ b/deliverables/pike/python-zunclient.yaml
@@ -17,6 +17,10 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: d4ea2de956cb95939c5457e647285a3c5c841c21
+  - version: 0.4.1
+    projects:
+      - repo: openstack/python-zunclient
+        hash: 3995efdc1f5eb6c8c583fe47ec315fa08585c7ff
 branches:
   - name: stable/pike
     location: 0.4.0
