--- a/deliverables/queens/python-zunclient.yaml
+++ b/deliverables/queens/python-zunclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-zunclient
 release-model: cycle-with-intermediary
 team: zun
 type: library
+releases:
+  - version: 0.5.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: 3a3f4535b9ad510bcc5ff09f4909035107b1eecb
