--- a/deliverables/queens/ovsdbapp.yaml
+++ b/deliverables/queens/ovsdbapp.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: 0b86d12d84c267464153bee387269fc074ee7d94
+  - version: 0.7.0
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: 558783eba2987a86a1b838a5a89d8957eb950f94
