--- a/deliverables/queens/trove-dashboard.yaml
+++ b/deliverables/queens/trove-dashboard.yaml
@@ -3,3 +3,8 @@ launchpad: trove
 release-model: cycle-with-milestones
 team: trove
 type: horizon-plugin
+releases:
+  - projects:
+      - hash: 100229f18cb13010d5c0458a1fe9dfc8cdbe728d
+        repo: openstack/trove-dashboard
+    version: 10.0.0.0b1
