TripleO Newton release
Depends-On: Ib9fa9bb390e646b904dac2d7a426ae54ae4067eb
Change-Id: Iac3adf8fa170fd1db41318517666f1eb952abc35

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -55,5 +55,9 @@ releases:
       - hash: 808c89b9247b0570f32a67b88d102790445ebee5
         repo: openstack/instack-undercloud
     version: 5.3.2
+  - projects:
+      - hash: 61e201bd3cf65e931cc865a1018cf9441e50dab8
+        repo: openstack/instack-undercloud
+    version: 5.3.3
 team: tripleo
 type: other
