--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -61,5 +61,9 @@ releases:
       - hash: 301a4f366f3a2ab3d970cba68ca0d7a474c5ec34
         repo: openstack/puppet-tripleo
     version: 5.6.4
+  - projects:
+      - hash: 388d184386c99263b79f55267087ca5b7fc72222
+        repo: openstack/puppet-tripleo
+    version: 5.6.5
 team: tripleo
 type: other
