--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -50,5 +50,9 @@ releases:
       - hash: f62e8f966d89e1be3825a9fd6d23a02a52981a0e
         repo: openstack/tripleo-common
     version: 5.4.4
+  - projects:
+      - hash: fb9fa9844ca079d6322eaeb00564dc4bba324c3c
+        repo: openstack/tripleo-common
+    version: 5.4.5
 team: tripleo
 type: library
