--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -59,5 +59,9 @@ releases:
       - hash: 186e2cbb15266341ba446d56f41396b88a3bb391
         repo: openstack/tripleo-heat-templates
     version: 5.3.3
+  - projects:
+      - hash: 79face75fa31dbecfdca71c6194f0c3935815d3d
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.4
 team: tripleo
 type: other
