--- a/deliverables/newton/tripleo-image-elements.yaml
+++ b/deliverables/newton/tripleo-image-elements.yaml
@@ -47,5 +47,9 @@ releases:
       - hash: cb8335c9b17d222071f59b2b1e5aa2dcbb9804d4
         repo: openstack/tripleo-image-elements
     version: 5.3.1
+  - projects:
+      - hash: 45c06bf83366d01c16f7e5d6389ecd2dbeeeb798
+        repo: openstack/tripleo-image-elements
+    version: 5.3.2
 team: tripleo
 type: other
