TripleO Ocata release
Change-Id: I19f7102f081229aae05bae8c6bddb23d4ccb1b3c

--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -32,5 +32,9 @@ releases:
       - hash: 02d25849aaa5fec977346c785b0ed594fd55321d
         repo: openstack/instack-undercloud
     version: 6.1.1
+  - projects:
+      - hash: b0e0ed7f070d47970f49bcea8b642669fe5c664a
+        repo: openstack/instack-undercloud
+    version: 6.1.2
 team: tripleo
 type: other
