--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -42,5 +42,9 @@ releases:
       - hash: 0c3e97a5ae138a1f9a343be81b3c54bf5ed4daba
         repo: openstack/puppet-tripleo
     version: 6.5.3
+  - projects:
+      - hash: c610ce13518c5ea6c5978074c7a4a095ce45fdf1
+        repo: openstack/puppet-tripleo
+    version: 6.5.4
 team: tripleo
 type: other
