--- a/deliverables/ocata/tripleo-image-elements.yaml
+++ b/deliverables/ocata/tripleo-image-elements.yaml
@@ -32,5 +32,9 @@ releases:
       - hash: ee2e37a997c8ddef32511d5e2c033b746340b35b
         repo: openstack/tripleo-image-elements
     version: 6.1.0
+  - projects:
+      - hash: 0a5ddb0de5a6f6fa5467806b45f5146c83924f1d
+        repo: openstack/tripleo-image-elements
+    version: 6.1.1
 team: tripleo
 type: other
