--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -48,5 +48,9 @@ releases:
       - hash: c905682b23da52e01c2ed8eb23182d0a961ceea1
         repo: openstack/tripleo-heat-templates
     version: 6.2.3
+  - projects:
+      - hash: b8680d53b82aed219ec006451add8f112b199451
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.4
 team: tripleo
 type: other
