TripleO Pike release
Depends-On: Ib9fa9bb390e646b904dac2d7a426ae54ae4067eb
Change-Id: I71514d3ee2e75c6bf32c06e67fdfa15d5aff6a51

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -38,5 +38,9 @@ releases:
       - hash: 0c364056ddc634986af315e05227da87046aad39
         repo: openstack/instack-undercloud
     version: 7.4.2
+  - projects:
+      - hash: a41331486265a6c257e7bef0624c8155b0d40139
+        repo: openstack/instack-undercloud
+    version: 7.4.3
 team: tripleo
 type: other
