--- a/deliverables/pike/paunch.yaml
+++ b/deliverables/pike/paunch.yaml
@@ -32,3 +32,7 @@ releases:
     projects:
       - repo: openstack/paunch
         hash: d11e04548e43c0ad099910cfacdb02d43e8a3a7c
+  - projects:
+      - hash: 30d03232c1e1d7f57a5877d52a885884a3534af7
+        repo: openstack/paunch
+    version: 1.5.1
