--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -33,5 +33,9 @@ releases:
       - hash: cb32fd0ab470e5aa1d01d4ab93979be4d5af6afb
         repo: openstack/puppet-tripleo
     version: 7.4.2
+  - projects:
+      - hash: 7a52d38b80bf635aa93c72d9d52ce826495b0c0b
+        repo: openstack/puppet-tripleo
+    version: 7.4.3
 team: tripleo
 type: other
