--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -30,6 +30,10 @@ releases:
       - hash: 456a1f3478cf5f2e99ec44104a07645d9b04524e
         repo: openstack/python-tripleoclient
     version: 7.3.2
+  - projects:
+      - hash: 4bad32cf1de6005917d6e4a62787a24430f4eabc
+        repo: openstack/python-tripleoclient
+    version: 7.3.3
 team: tripleo
 type: library
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/pike.html
