--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -46,5 +46,9 @@ releases:
       - hash: 5922c80705c455d3d1d5dcb085ec08b19dd7accd
         repo: openstack/tripleo-common
     version: 7.6.2
+  - projects:
+      - hash: 701daeb20ed47b6812c57d439cf0acc4d4fa62c9
+        repo: openstack/tripleo-common
+    version: 7.6.3
 team: tripleo
 type: other
