--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: 94e8238d6b61811d705b653ffb36d1aea624d015
         repo: openstack/tripleo-heat-templates
     version: 7.0.2
+  - projects:
+      - hash: 06f8f2eb1c60bcbb92989880866f43fb5422d865
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.3
 team: tripleo
 type: other
