--- a/deliverables/pike/tripleo-image-elements.yaml
+++ b/deliverables/pike/tripleo-image-elements.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: 526772d36e92ee25f62077f056e7575aedcd9833
         repo: openstack/tripleo-image-elements
     version: 7.0.0
+  - projects:
+      - hash: 2e61e3191633f787e6afc4f6a4d64e53004d7aba
+        repo: openstack/tripleo-image-elements
+    version: 7.0.1
 team: tripleo
 type: other
