--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: 2094778336bffb245cb4250d5b5418c79cb7486a
         repo: openstack/tripleo-puppet-elements
     version: 7.0.0
+  - projects:
+      - hash: 82d7e6c905bbd3f7b2c81f4e8838b3f9b2978b44
+        repo: openstack/tripleo-puppet-elements
+    version: 7.0.1
 team: tripleo
 type: other
