--- a/deliverables/pike/tripleo-ui.yaml
+++ b/deliverables/pike/tripleo-ui.yaml
@@ -34,5 +34,9 @@ releases:
       - hash: 627a7dd6323eeea2528efcf9d57510c4e57dac14
         repo: openstack/tripleo-ui
     version: 7.4.2
+  - projects:
+      - hash: f4e1c6bbd13af4d70f6dc1d4f6b98c7c5f09993e
+        repo: openstack/tripleo-ui
+    version: 7.4.3
 team: tripleo
 type: other
