--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -30,5 +30,9 @@ releases:
       - hash: 2e43f1a7f37ad1adc072aa8bc5400ac4a616bbc7
         repo: openstack/tripleo-validations
     version: 7.4.1
+  - projects:
+      - hash: 59be9c6b08a3e385cfe7464305fcdfe40560f1ac
+        repo: openstack/tripleo-validations
+    version: 7.4.2
 team: tripleo
 type: other
