tripleo: switch projects to correct release-type
Depends-On: I468c3acdd53b9b2c892fbabaf1535b7c563f8339
Change-Id: I0786a39b58d4f5445b1ffe96ce143040a284034d

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo
 release-model: cycle-trailing
+release-type: python-pypi
 releases:
   - projects:
       - hash: cb69c9e4ab119a93f4ba24f285f6b5df5ca05aab
