--- a/deliverables/newton/instack.yaml
+++ b/deliverables/newton/instack.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: python-pypi
 releases:
   - projects:
       - hash: 5aabf5caf3c62384b1b027ca1b6f2aa3166a0ab3
