--- a/deliverables/newton/os-apply-config.yaml
+++ b/deliverables/newton/os-apply-config.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: os-apply-config
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: 36f24df3e79e7c0f3621e8231853342b4f89d0e8
