--- a/deliverables/newton/os-collect-config.yaml
+++ b/deliverables/newton/os-collect-config.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: os-collect-config
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: a88e2733a7c801ce9cda2b25fbdd1b0fc66ade99
