--- a/deliverables/newton/os-net-config.yaml
+++ b/deliverables/newton/os-net-config.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: os-net-config
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: 60475755e3750b2d2e047578a68c8c2327bf50d7
