--- a/deliverables/newton/os-refresh-config.yaml
+++ b/deliverables/newton/os-refresh-config.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: os-refresh-config
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: 08b517491f61cb17b46ea783b70ce079330294ae
