--- a/deliverables/newton/python-tripleoclient.yaml
+++ b/deliverables/newton/python-tripleoclient.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo
 release-model: cycle-trailing
+release-type: python-pypi
 releases:
   - projects:
       - hash: b9b2e4ade64b58784cc6fa9a8f1f3cb14ab18b50
