--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo-common
 release-model: cycle-trailing
+release-type: python-pypi
 releases:
   - projects:
       - hash: 7bd80dbdf22f0693e357d9a81ee6308ad53a7a1e
