--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo
 release-model: cycle-trailing
+release-type: python-pypi
 releases:
   - projects:
       - hash: ccb46a51ac8ca59865c04b681628edbc5a167530
