--- a/deliverables/newton/tripleo-image-elements.yaml
+++ b/deliverables/newton/tripleo-image-elements.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: 9e381f509be93956c4791cac2df94bf1b5015933
