--- a/deliverables/newton/tripleo-puppet-elements.yaml
+++ b/deliverables/newton/tripleo-puppet-elements.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo
 release-model: cycle-trailing
+release-type: python-pypi
 releases:
   - projects:
       - hash: c9f35487a980a30062fbdce92a17e0dcd5cbcb05
