--- a/deliverables/newton/tripleo-ui.yaml
+++ b/deliverables/newton/tripleo-ui.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: nodejs
 releases:
   - projects:
       - hash: 773e3abc7465192a339a57cb5952d1bc8afa6230
