--- a/deliverables/newton/tripleo-validations.yaml
+++ b/deliverables/newton/tripleo-validations.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/newton
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: python-pypi
 releases:
   - projects:
       - hash: f614ef744fc2949ea8911683662ae50896a8f398
