--- a/deliverables/ocata/instack-undercloud.yaml
+++ b/deliverables/ocata/instack-undercloud.yaml
@@ -5,6 +5,7 @@ branches:
 launchpad: tripleo
 release-model: cycle-trailing
 release-notes: https://docs.openstack.org/releasenotes/instack-undercloud/ocata.html
+release-type: python-pypi
 releases:
   - projects:
       - hash: 41a6c74e437538530cce7126c306f951f669ac94
