--- a/deliverables/ocata/instack.yaml
+++ b/deliverables/ocata/instack.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/ocata
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: python-pypi
 releases:
   - projects:
       - hash: 9e1f7099b24bf51344aa1f33e0a1092730e26c11
