--- a/deliverables/ocata/os-apply-config.yaml
+++ b/deliverables/ocata/os-apply-config.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/ocata
 launchpad: os-apply-config
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: 1bd0206930e9af8e91f7eae6878530c6a7968910
