--- a/deliverables/ocata/os-collect-config.yaml
+++ b/deliverables/ocata/os-collect-config.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/ocata
 launchpad: os-collect-config
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: e8e2f3d5f2ebc6c08383bf98e5e27c689fc6e7a1
