--- a/deliverables/ocata/os-net-config.yaml
+++ b/deliverables/ocata/os-net-config.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/ocata
 launchpad: os-net-config
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: e479535b508b4072f64300809b824dfecc3a9182
