--- a/deliverables/ocata/python-tripleoclient.yaml
+++ b/deliverables/ocata/python-tripleoclient.yaml
@@ -5,6 +5,7 @@ branches:
 launchpad: tripleo
 release-model: cycle-trailing
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/ocata.html
+release-type: python-pypi
 releases:
   - projects:
       - hash: 2cc4eef66060bf4fc4071c2368b59fe4df7ace14
