--- a/deliverables/ocata/tripleo-common.yaml
+++ b/deliverables/ocata/tripleo-common.yaml
@@ -5,6 +5,7 @@ branches:
 launchpad: tripleo-common
 release-model: cycle-trailing
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/ocata.html
+release-type: python-pypi
 releases:
   - projects:
       - hash: 6b29e69077c3a4acb78c0d024b6c76b85de25a58
