--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -5,6 +5,7 @@ branches:
 launchpad: tripleo
 release-model: cycle-trailing
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/ocata.html
+release-type: python-pypi
 releases:
   - projects:
       - hash: 521779edd4dbeb65e0c62c48567dd478b3fab5a5
