--- a/deliverables/ocata/tripleo-image-elements.yaml
+++ b/deliverables/ocata/tripleo-image-elements.yaml
@@ -5,6 +5,7 @@ branches:
 launchpad: tripleo
 release-model: cycle-trailing
 release-notes: https://docs.openstack.org/releasenotes/tripleo-image-elements/ocata.html
+release-type: python-pypi
 releases:
   - projects:
       - hash: 8c959cfad29aac9627badc5faa0eed05b9cc682e
