--- a/deliverables/ocata/tripleo-puppet-elements.yaml
+++ b/deliverables/ocata/tripleo-puppet-elements.yaml
@@ -5,6 +5,7 @@ branches:
 launchpad: tripleo
 release-model: cycle-trailing
 release-notes: https://docs.openstack.org/releasenotes/tripleo-puppet-elements/ocata.html
+release-type: python-pypi
 releases:
   - projects:
       - hash: 94f02710ff06516da530c2386f2ab37fb8b8c843
