--- a/deliverables/ocata/tripleo-ui.yaml
+++ b/deliverables/ocata/tripleo-ui.yaml
@@ -5,6 +5,7 @@ branches:
 launchpad: tripleo
 release-model: cycle-with-intermediary
 release-notes: https://docs.openstack.org/releasenotes/tripleo-ui/ocata.html
+release-type: nodejs
 releases:
   - projects:
       - hash: 75a4c46df310bae25ccc0677bc4e065ef70bf288
