--- a/deliverables/ocata/tripleo-validations.yaml
+++ b/deliverables/ocata/tripleo-validations.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/ocata
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: python-pypi
 releases:
   - projects:
       - hash: e7192c38d1dcb6e94866057526dd106b00a9749d
