--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -1,6 +1,7 @@
 ---
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: python-pypi
 branches:
   - name: stable/pike
     location: 7.3.0
