--- a/deliverables/pike/instack.yaml
+++ b/deliverables/pike/instack.yaml
@@ -1,6 +1,7 @@
 ---
 launchpad: tripleo
 release-model: cycle-with-intermediary
+release-type: python-pypi
 releases:
   - projects:
       - hash: ec102b19a029d0ca7fcf1267656256b4023cf57e
