--- a/deliverables/pike/os-apply-config.yaml
+++ b/deliverables/pike/os-apply-config.yaml
@@ -1,6 +1,7 @@
 ---
 launchpad: os-apply-config
 release-model: cycle-with-intermediary
+release-type: python-pypi
 branches:
   - location: 7.1.0
     name: stable/pike
