--- a/deliverables/pike/python-tripleoclient.yaml
+++ b/deliverables/pike/python-tripleoclient.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/pike
 launchpad: tripleo
 release-model: cycle-trailing
+release-type: python-pypi
 releases:
   - projects:
       - hash: 27d43fffff56de18884db5bab1f84eec507a7e12
