--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -1,6 +1,7 @@
 ---
 launchpad: tripleo-common
 release-model: cycle-trailing
+release-type: python-pypi
 branches:
   - name: stable/pike
     location: 7.5.0
