--- a/deliverables/ocata/os-refresh-config.yaml
+++ b/deliverables/ocata/os-refresh-config.yaml
@@ -4,6 +4,7 @@ branches:
     name: stable/ocata
 launchpad: os-refresh-config
 release-model: cycle-with-milestones
+release-type: python-pypi
 releases:
   - projects:
       - hash: 962e02501bf4af3af7286b857115aae01264a91d
