--- a/deliverables/pike/tripleo-puppet-elements.yaml
+++ b/deliverables/pike/tripleo-puppet-elements.yaml
@@ -1,6 +1,7 @@
 ---
 launchpad: tripleo
 release-model: cycle-trailing
+release-type: python-pypi
 branches:
   - name: stable/pike
     location: 7.0.0.0rc1
