--- a/deliverables/queens/python-manilaclient.yaml
+++ b/deliverables/queens/python-manilaclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-manilaclient
 release-model: cycle-with-intermediary
 team: manila
 type: library
+releases:
+  - projects:
+      - hash: 63b5a4dedfde0a64c75fd4dad4a1da6a775effdf
+        repo: openstack/python-manilaclient
+    version: 1.18.0
