--- a/deliverables/pike/mistral-lib.yaml
+++ b/deliverables/pike/mistral-lib.yaml
@@ -21,6 +21,10 @@ releases:
     projects:
       - repo: openstack/mistral-lib
         hash: b5e6b22ba9d1b77bf35babc39c6a49db80761117
+  - version: 0.3.2
+    projects:
+      - repo: openstack/mistral-lib
+        hash: 90457d594a091a0f8dfa0f25f2308cb22c9842b8
 branches:
   - name: stable/pike
     location: 0.3.0
