Add oslo releases for Pike Nov 6, 2017
All of libraries include global requirements update without function
change, this ensure oslo libraries depends latest requiremnts in
pike release.

Change-Id: I7e0202a7867d080cab6462f591711686f061e395

--- a/deliverables/pike/castellan.yaml
+++ b/deliverables/pike/castellan.yaml
@@ -36,6 +36,10 @@ releases:
     projects:
       - repo: openstack/castellan
         hash: eaf2aa6cfe8abc5f8e086d88d98a8e24d8f8a8b5
+  - projects:
+      - hash: 124e9296fe79412b510c73b35936a6be91267d18
+        repo: openstack/castellan
+    version: 0.12.1
 branches:
   - name: stable/pike
     location: 0.12.0
