--- a/deliverables/pike/oslo.cache.yaml
+++ b/deliverables/pike/oslo.cache.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: cfe395f980603040ec40f9e6cf0a98a952f981ad
         repo: openstack/oslo.cache
     version: 1.25.0
+  - projects:
+      - hash: f5b6ddf7d18a7e06e19712ca7a2509d658a08c4d
+        repo: openstack/oslo.cache
+    version: 1.25.1
 team: oslo
 type: library
