--- a/deliverables/pike/oslo.db.yaml
+++ b/deliverables/pike/oslo.db.yaml
@@ -47,5 +47,9 @@ releases:
       - hash: 5f9400d777124a7139c7b65a107f174cba7373d6
         repo: openstack/oslo.db
     version: 4.25.0
+  - projects:
+      - hash: 71607d59ec5c02d7beb5109c500aa9b6a0d9ee2c
+        repo: openstack/oslo.db
+    version: 4.25.1
 team: oslo
 type: library
