--- a/deliverables/pike/oslo.i18n.yaml
+++ b/deliverables/pike/oslo.i18n.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: faa51d406e9c3e9462d88b08f6bdcc64365f3790
         repo: openstack/oslo.i18n
     version: 3.17.0
+  - projects:
+      - hash: f2729cd36f8694a6ec53a0e700599ddf4427440d
+        repo: openstack/oslo.i18n
+    version: 3.17.1
 team: oslo
 type: library
