--- a/deliverables/pike/oslo.log.yaml
+++ b/deliverables/pike/oslo.log.yaml
@@ -55,5 +55,9 @@ releases:
       - hash: 8bb44cdedd7715e35614044b86e71e0fc308ae8b
         repo: openstack/oslo.log
     version: 3.30.0
+  - projects:
+      - hash: ad776e84b51223b85b7dfa85a7e77bb2f3848f4b
+        repo: openstack/oslo.log
+    version: 3.30.1
 team: oslo
 type: library
