--- a/deliverables/pike/oslo.policy.yaml
+++ b/deliverables/pike/oslo.policy.yaml
@@ -47,5 +47,9 @@ releases:
       - hash: 94c7504b11113365d28c7f7cff1d6bd6d315e588
         repo: openstack/oslo.policy
     version: 1.25.1
+  - projects:
+      - hash: cb9ab34cd40a7cd9eff0e40ccc2df4ee88edae4e
+        repo: openstack/oslo.policy
+    version: 1.25.2
 team: oslo
 type: library
