--- a/deliverables/pike/oslo.privsep.yaml
+++ b/deliverables/pike/oslo.privsep.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: d24b988022403a6fff23422cdac73fdc7e153124
         repo: openstack/oslo.privsep
     version: 1.22.0
+  - projects:
+      - hash: d27bb5371c90e0f8b1bdf1bc24f16e1532b3e595
+        repo: openstack/oslo.privsep
+    version: 1.22.1
 team: oslo
 type: library
