--- a/deliverables/pike/oslo.reports.yaml
+++ b/deliverables/pike/oslo.reports.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: 5e4ea9af13c8ac1d65bf150c6c8970b38d16da51
         repo: openstack/oslo.reports
     version: 1.22.0
+  - projects:
+      - hash: a837f40bb0c31958d3ce99e2f9a6eb2fe651f4e6
+        repo: openstack/oslo.reports
+    version: 1.22.1
 team: oslo
 type: library
