--- a/deliverables/pike/oslo.rootwrap.yaml
+++ b/deliverables/pike/oslo.rootwrap.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: 1bd761df8e952483d4345b97a00aa327afa79b62
         repo: openstack/oslo.rootwrap
     version: 5.9.0
+  - projects:
+      - hash: b7b63e2ecb50ba66a1f152ae6f71dd208326fbee
+        repo: openstack/oslo.rootwrap
+    version: 5.9.1
 team: oslo
 type: library
