--- a/deliverables/pike/oslo.serialization.yaml
+++ b/deliverables/pike/oslo.serialization.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: bbee6d1aa13ecd99c72087a77fda1f14274d265f
         repo: openstack/oslo.serialization
     version: 2.20.0
+  - projects:
+      - hash: e56d91427c11a3813a0154d47e804018e580086e
+        repo: openstack/oslo.serialization
+    version: 2.20.1
 team: oslo
 type: library
