--- a/deliverables/pike/oslo.service.yaml
+++ b/deliverables/pike/oslo.service.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: 5a8a712c26cb053cbabf49044e6831ed98a2c2d5
         repo: openstack/oslo.service
     version: 1.25.0
+  - projects:
+      - hash: 0020bef6a503905aca5cdb70aee54e1c5f2ff472
+        repo: openstack/oslo.service
+    version: 1.25.1
 team: oslo
 type: library
