--- a/deliverables/pike/oslo.utils.yaml
+++ b/deliverables/pike/oslo.utils.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: dd1ceea294b36dc7f3e4546498b092c3fd13875f
         repo: openstack/oslo.utils
     version: 3.28.0
+  - projects:
+      - hash: 8b3965b9bbe1e31a4939f2f69c5239d6d5c7f72c
+        repo: openstack/oslo.utils
+    version: 3.28.1
 team: oslo
 type: library
