--- a/deliverables/pike/oslo.versionedobjects.yaml
+++ b/deliverables/pike/oslo.versionedobjects.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: b65e47382e3219585a1654ca2be726e564ed95d5
         repo: openstack/oslo.versionedobjects
     version: 1.26.0
+  - projects:
+      - hash: 78cd10662f20c4ae43e20a2dfa844cfd4e5cae26
+        repo: openstack/oslo.versionedobjects
+    version: 1.26.1
 team: oslo
 type: library
