--- a/deliverables/pike/oslo.vmware.yaml
+++ b/deliverables/pike/oslo.vmware.yaml
@@ -35,5 +35,9 @@ releases:
       - hash: 0aeed64bbb60581989436102ad68268d92024947
         repo: openstack/oslo.vmware
     version: 2.23.0
+  - projects:
+      - hash: 95a30dfa24d259fe16f0fd43eb1b67b9f3fc0397
+        repo: openstack/oslo.vmware
+    version: 2.23.1
 team: oslo
 type: library
