--- a/deliverables/pike/oslosphinx.yaml
+++ b/deliverables/pike/oslosphinx.yaml
@@ -31,5 +31,9 @@ releases:
       - hash: 1cb173e6a798906f6f205b1241625bb62fb6f8df
         repo: openstack/oslosphinx
     version: 4.15.1
+  - projects:
+      - hash: 7d80407b43d2eb7198e72810c4ccfd3eaafe25da
+        repo: openstack/oslosphinx
+    version: 4.15.2
 team: oslo
 type: library
