--- a/deliverables/pike/stevedore.yaml
+++ b/deliverables/pike/stevedore.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: b18bd78569abd2633d6c87d60772cd1e8830f2ea
         repo: openstack/stevedore
     version: 1.25.0
+  - projects:
+      - hash: 2b9a08ce91684c6e51d5cfe0737627815c0c3150
+        repo: openstack/stevedore
+    version: 1.25.1
 team: oslo
 type: library
