--- a/deliverables/pike/futurist.yaml
+++ b/deliverables/pike/futurist.yaml
@@ -32,5 +32,9 @@ releases:
       - hash: 549c4aaaaa18ec2a15766fbbf852196c5934eb37
         repo: openstack/futurist
     version: 1.3.0
+  - projects:
+      - hash: 54ce0e776fb27583ff65b281f8fa72b960bb7522
+        repo: openstack/futurist
+    version: 1.3.1
 team: oslo
 type: library
