--- a/deliverables/pike/oslotest.yaml
+++ b/deliverables/pike/oslotest.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: 491d9ca9c4681b937e3e80cc09ab85a4b4903671
         repo: openstack/oslotest
     version: 2.17.0
+  - projects:
+      - hash: aea2b5cfd6442195f7ee479e21664631825af924
+        repo: openstack/oslotest
+    version: 2.17.1
 team: oslo
 type: library
