--- a/deliverables/pike/taskflow.yaml
+++ b/deliverables/pike/taskflow.yaml
@@ -27,5 +27,9 @@ releases:
       - hash: 72db32b7520c9d7b69c3f9839f531dc7582780bf
         repo: openstack/taskflow
     version: 2.14.0
+  - projects:
+      - hash: ed867c4fd17e4102a133c313a13af37baccf14a4
+        repo: openstack/taskflow
+    version: 2.14.1
 team: oslo
 type: library
