os-brick stable/pike 1.15.4 release
This contains one significant bugfix for
bug 1719719.

Change-Id: Iecf2a0e617623f199a1df383f8ac29127da2a122

--- a/deliverables/pike/os-brick.yaml
+++ b/deliverables/pike/os-brick.yaml
@@ -39,5 +39,9 @@ releases:
       - hash: 68106be749971b9b7aa8e4bbfe5aee6a56857741
         repo: openstack/os-brick
     version: 1.15.3
+  - projects:
+      - hash: cad9fb07959e7b63208706e4970bd6171eda786b
+        repo: openstack/os-brick
+    version: 1.15.4
 team: cinder
 type: library
