--- a/deliverables/queens/python-ironicclient.yaml
+++ b/deliverables/queens/python-ironicclient.yaml
@@ -4,3 +4,8 @@ launchpad: python-ironicclient
 release-model: cycle-with-intermediary
 team: ironic
 type: library
+releases:
+  - projects:
+      - hash: 9ab4193ea3a7cc11046f6e3e1b64a16211d00ef2
+        repo: openstack/python-ironicclient
+    version: 2.0.0
