--- a/deliverables/_independent/designate-tempest-plugin.yaml
+++ b/deliverables/_independent/designate-tempest-plugin.yaml
@@ -12,3 +12,7 @@ releases:
     projects:
       - repo: openstack/designate-tempest-plugin
         hash: 62677f8df1fb401148ad1ac7cc0fe2ef716ba12f
+  - version: 0.3.0
+    projects:
+      - repo: openstack/designate-tempest-plugin
+        hash: ba1288637e40f938b39f6ff10127217cdc9300e6
