--- a/deliverables/pike/mistral-lib.yaml
+++ b/deliverables/pike/mistral-lib.yaml
@@ -25,6 +25,10 @@ releases:
     projects:
       - repo: openstack/mistral-lib
         hash: 90457d594a091a0f8dfa0f25f2308cb22c9842b8
+  - version: 0.3.3
+    projects:
+      - repo: openstack/mistral-lib
+        hash: 8986ce9529f90ed5cdb52fd54a54ccc21378b320
 branches:
   - name: stable/pike
     location: 0.3.0
